<resources>
    <string name="app_name">ShoppingListApplication</string>
    <string name="categoryMsgLabel">"Category: "</string>
    <string name="nameMsgLabel">"Name: "</string>
    <string name="descMsgLabel">"Description: "</string>
    <string name="priceMsgLabel">Price: $</string>
    <string name="purchasedMsgLabel">"Purchased: "</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="activityCancelled">Task cancelled</string>
    <string name="viewDialogTitle">Item Information</string>
    <string name="beverage">Beverage</string>
    <string name="bread">Bread</string>
    <string name="canned_good">Canned good</string>
    <string name="dairy">Dairy</string>
    <string name="dried_good">Dried good</string>
    <string name="meat">Meat</string>
    <string name="produce">Produce</string>
    <string name="snack">Snack</string>
    <string name="clothing">Clothing</string>
    <string name="household">Household</string>
    <string name="toiletry">Toiletry</string>
    <string name="other">Other</string>
    <string name="emptyNameError">Name cannot be empty</string>
    <string name="purchased">Purchased</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="show_purchased_items">Show purchased items</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="price_in_dollars">Price in dollars</string>
    <string name="save_item">Save item</string>
    <string name="add_item">ADD ITEM</string>
    <string name="delete_list">DELETE LIST</string>
    <string name="createActivityLabel">Create and edit item</string>
    <string name="appLabel">Shopping List</string>
    <string name="book">Book</string>
    <string name="electronic">Electronic</string>
</resources>
