<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="@dimen/itemRowRadius"
    card_view:cardElevation="@dimen/itemRowElevation"
    card_view:cardBackgroundColor="@color/cardBackground"
    android:layout_margin="@dimen/itemRowMargin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standardMargin"
        android:orientation="vertical"
        android:padding="@dimen/standardPadding">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <ImageView
                android:id="@+id/icon"
                android:layout_width="@dimen/iconSize"
                android:layout_height="@dimen/iconSize"/>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/icon"
                android:paddingLeft="@dimen/iconFieldPadding"
                android:textStyle="bold"
                android:textSize="@dimen/cardTextSize"/>
            <CheckBox
                android:id="@+id/cbPurchased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvName"
                android:layout_toRightOf="@+id/icon"
                android:layout_marginLeft="@dimen/checkboxLeftPadding"
                android:text="@string/purchased" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:textStyle="bold"
                android:textSize="@dimen/cardTextSize" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/btnView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_weight="1" />
            
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
